# anvyx

./: .gitignore  Cargo.toml  clippy.toml  justfile  rustfmt.toml
.cargo/: config.toml
crates/anvyl/: Cargo.toml
crates/anvyl/src/: check.rs  main.rs  run.rs
crates/anvyx/: Cargo.toml
crates/anvyx-macros/src/: expand.rs  provider.rs  type_map.rs
crates/anvyx-macros/tests/: export_fn_tests.rs
crates/anvyx/src/: build.rs  check.rs  clean.rs  fmt.rs  init.rs  main.rs  manifest.rs  progress.rs  run.rs  std_support.rs
crates/anvyx/templates/: build_main.txt  runner_main.txt  runtime_init.txt
crates/core/: Cargo.toml
crates/core/src/: double.anv  double.rs  float.anv  float.rs  int.anv  int.rs  lib.rs  option.rs  prelude.anv  prelude.rs  range.anv  range.rs  string.anv  string.rs
crates/fmt/: Cargo.toml
crates/fmt/src/: lib.rs  trivia.rs
crates/lang/: Cargo.toml
crates/lang/core/: string.anv
crates/lang/src/: ast.rs  backend_names.rs  builtin.rs  conditional.rs  core_string.rs  diagnostic.rs  error.rs  hir.rs  intrinsic.rs  intrinsic_resolve.rs  ir_meta.rs  lexer.rs  lib.rs  lower.rs  metadata.rs  parser.rs  prelude_enums.rs  resolve.rs  span.rs  std_module.rs  test_helpers.rs  typecheck.rs
crates/lang/src/lower/: assign.rs  block.rs  coerce.rs  expr.rs  for_loop.rs  helpers.rs  match_stmt.rs  mod.rs  ownership.rs  program.rs  tests.rs
crates/lang/src/parser/: common.rs  decl.rs  expr.rs  mod.rs  ops.rs  pattern.rs  stmt.rs  types.rs
crates/lang/src/parser/tests/: doc_comments.rs  expr.rs  helpers.rs  imports.rs  mod.rs  stmt.rs  types.rs
crates/lang/src/rust/: emit.rs  mod.rs  pipeline.rs  stringify.rs  validate.rs
crates/lang/src/typecheck/: annotations.rs  call.rs  composite.rs  const_eval.rs  constraint.rs  control.rs  cyclicity.rs  decl.rs  error.rs  expr.rs  infer.rs  lint.rs  mod.rs  ops.rs  pattern.rs  postfix.rs  range.rs  stmt.rs  types.rs  unify.rs  visit.rs
crates/lang/src/typecheck/tests/: arrays.rs  binding.rs  blocks.rs  call.rs  constraint.rs  cyclicity.rs  equality.rs  functions.rs  helpers.rs  infer.rs  keyable.rs  mod.rs  mutability.rs  ops.rs  range.rs  types.rs  unify.rs
crates/lang/src/vm/: builtins.rs  bytecode.rs  callback.rs  compiler.rs  cycle_collector.rs  extern_type.rs  handle_store.rs  managed_rc.rs  meta.rs  mod.rs  runtime.rs  value.rs
crates/macros/: Cargo.toml
crates/macros/src/: codegen.rs  expand.rs  export_methods.rs  export_type.rs  lib.rs  naming.rs  provider.rs  type_map.rs  util.rs
crates/macros/tests/: export_fn_tests.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: cycle_collector.rs  lib.rs  managed_rc.rs  suspect_buffer.rs  type_registry.rs
crates/std/: Cargo.toml
crates/std/anv/: math.anv
crates/std/src/: lib.rs  linalg.anv  linalg.rs  maps.anv  maps.rs  math.anv  math.rs  mem.anv  mem.rs  (+2 more)
crates/test-runner/: Cargo.toml  runner.txt
editors/: README.md
editors/nvim/: .gitignore  grammar.js  package-lock.json  package.json  tree-sitter.json
editors/scripts/: check_keywords.sh
editors/vscode/: package.json
examples/: bench_ownership.anv
examples/extern_types/: anvyx.toml
examples/externs/: anvyx.toml
examples/simple_extern/: anvyx.toml
scripts/: rust_coverage.py  scan_tests.py
tests/: test.anv
tests/run/: std_math_alias_ok.anv  std_math_helpers_ok.anv  std_math_selective_ok.anv  std_math_wildcard_ok.anv
(+1780 files in other folders)
