[package]
name = "anvyx"
description.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
anvyx-lang = { path = "../lang" }
anvyx-std = { path = "../std" }
anvyx-core = { path = "../core" }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indicatif = "0.17"
console = "0.15"
