[package]
name = "anvyx-lang"
version.workspace = true
edition.workspace = true

[dependencies]
fd-lock = "4.0"
chumsky = "0.11.2"
ariadne = "0.6.0"
indexmap = "2"
internment = "0.8.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anvyx-macros = { path = "../macros" }
anvyx-runtime = { path = "../runtime" }

[lints]
workspace = true
